--- a/create_nft_loan.html
+++ b/create_nft_loan.html
@@ -81,7 +81,7 @@ display: none;
 
 <div id=category121w83>		
 <input type="button" value="Lend" onClick="create_obligation()"/>
-<input type="button" value="transfer to lender" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:30; left:0;" onClick="transfer_to_lender_request()"/>
+<input type="button" value="transfer to lender" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:30; left:0;" onClick="transfer_to_lender()"/>
 
 <input type="text" id="password" name="password" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:10; left:65;">	
 </div>
