--- a/create_nft_loan.html
+++ b/create_nft_loan.html
@@ -72,12 +72,12 @@ display: none;
 
 <body>
 
-<p id="contract_address_ID" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:35; left:0;"></p>		
-<p id="contract_token_id" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:55; left:0;"></p>
-<p id="contract_loan" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:75; left:0;"></p>
-<p id="contract_term" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:95; left:0;"></p>
-<p id="loan_obligation" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:115; left:0;"></p>
-<p id="latest_block" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:135; left:0;"></p>
+<p id="contract_address_ID" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; font-weight:200; position:absolute; top:35; left:0;"></p>		
+<p id="contract_token_id" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; font-weight:200; position:absolute; top:55; left:0;"></p>
+<p id="contract_loan" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; font-weight:200; position:absolute; top:75; left:0;"></p>
+<p id="contract_term" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; font-weight:200; position:absolute; top:95; left:0;"></p>
+<p id="loan_obligation" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; font-weight:200; position:absolute; top:115; left:0;"></p>
+<p id="latest_block" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; font-weight:200; position:absolute; top:135; left:0;"></p>
 
 <div id=category121w83>		
 <input type="button" value="Lend" onClick="create_obligation()"/>
