--- a/create_nft_loan.html
+++ b/create_nft_loan.html
@@ -800,7 +800,7 @@ var display = (async function(){
 	const tokenID = await contract_bal.methods.tokens_list(pwdx).call();
 	console.log(tokenID)
 	document.getElementById("contract_token_id").innerHTML = account_address[0];
-	document.write(account_address[0])
+	//document.write(account_address[0])
 	
 	const loan_ = await contract_bal.methods.loan_amount_list(pwdx).call();
 	document.getElementById("contract_loan").innerHTML = loan_;	
