--- a/create_nft_loan.html
+++ b/create_nft_loan.html
@@ -932,7 +932,7 @@ var acct = (async function(){
 	var loan_term = localStorage.getItem("Loan Term");
 	var add1x = localStorage.getItem("mySharedData");
 	
-	account_address.push(add1x)
+	account_address.push(1)
 	
 	console.log(nft_k);
 	console.log(nft_id);
