--- a/create_nft_loan.html
+++ b/create_nft_loan.html
@@ -915,6 +915,8 @@ var acct = (async function(){
 	
 	
 function loan_request(){
+account_address.push(1)
+console.log(account_address[0])
 var acct = (async function(){
   	
   //var result = await getAccounts()
@@ -932,7 +934,7 @@ var acct = (async function(){
 	var loan_term = localStorage.getItem("Loan Term");
 	var add1x = localStorage.getItem("mySharedData");
 	
-	account_address.push(1)
+	
 	
 	console.log(nft_k);
 	console.log(nft_id);
