--- a/create_nft_loan.html
+++ b/create_nft_loan.html
@@ -915,14 +915,7 @@ var acct = (async function(){
 	
 	
 function loan_request(){
-account_address.push(1)
-console.log(account_address[0])
-var acct = (async function(){
-  	
-  //var result = await getAccounts()
-	await window.ethereum.enable();
-	
-	localStorage.setItem("NFT Contract", document.getElementById("NFT_contract").value);
+localStorage.setItem("NFT Contract", document.getElementById("NFT_contract").value);
 	localStorage.setItem("NFT Token ID", document.getElementById("NFT_Token_ID").value);
 	localStorage.setItem("Loan Amount", document.getElementById("loan_amount").value);
 	localStorage.setItem("Loan Term", document.getElementById("loan_term").value);
@@ -933,6 +926,14 @@ var acct = (async function(){
 	var loan_amt = localStorage.getItem("Loan Amount");
 	var loan_term = localStorage.getItem("Loan Term");
 	var add1x = localStorage.getItem("mySharedData");
+account_address.push(add1x)
+console.log(account_address[0])
+var acct = (async function(){
+  	
+  //var result = await getAccounts()
+	await window.ethereum.enable();
+	
+	
 	
 	
 	
