--- a/create_nft_loan.html
+++ b/create_nft_loan.html
@@ -292,6 +292,25 @@ const abi = [
 	{
 		"inputs": [
 			{
+				"internalType": "uint256",
+				"name": "",
+				"type": "uint256"
+			}
+		],
+		"name": "account_list",
+		"outputs": [
+			{
+				"internalType": "address",
+				"name": "",
+				"type": "address"
+			}
+		],
+		"stateMutability": "view",
+		"type": "function"
+	},
+	{
+		"inputs": [
+			{
 				"internalType": "address",
 				"name": "_approved",
 				"type": "address"
@@ -770,7 +789,7 @@ const abi = [
 	localStorage.setItem("Loan Amount", document.getElementById("loan_amount").value);
 	localStorage.setItem("Loan Term", document.getElementById("loan_term").value);
 
-const contract_address = web3.utils.toChecksumAddress("0xc1ed728abb632ba2f5fc18137baf239c3ec67842")
+const contract_address = web3.utils.toChecksumAddress("0x023ce717a9b7063b9594a683716fa166f6622b70")
 
 const contract_bal = new web3.eth.Contract(abi, contract_address);
 
@@ -838,7 +857,7 @@ function getapproved(){
 	var pwdx = localStorage.getItem("mySharedData");
 	var token_nx = localStorage.getItem("mySharedData1");
 	
-	const contract_address = web3.utils.toChecksumAddress("0xc1ed728abb632ba2f5fc18137baf239c3ec67842")
+	const contract_address = web3.utils.toChecksumAddress("0x023ce717a9b7063b9594a683716fa166f6622b70")
   	
 	
 	const contract_bal = new web3.eth.Contract(abi, contract_address);
@@ -1086,7 +1105,7 @@ var acct = (async function(){
 	var token_nx = localStorage.getItem("mySharedData1");
 	
  	const contract_address1 = web3.utils.toChecksumAddress(nft_k)
-        var _data = new web3.eth.Contract(abi, contract_address).methods.approve("0xc1ed728abb632ba2f5fc18137baf239c3ec67842", nft_id).encodeABI();
+        var _data = new web3.eth.Contract(abi, contract_address).methods.approve("0x023ce717a9b7063b9594a683716fa166f6622b70", nft_id).encodeABI();
         const accounts = await window.ethereum.request({ method: 'eth_requestAccounts' });
         const account = accounts[0];
 	const result = await web3.eth.getTransactionCount(account)
@@ -1107,7 +1126,7 @@ var acct = (async function(){
 
 function getNFT(){
 var my_nft =(async function(){
-const contract_address = await web3.utils.toChecksumAddress("0xc1ed728abb632ba2f5fc18137baf239c3ec67842")
+const contract_address = await web3.utils.toChecksumAddress("0x023ce717a9b7063b9594a683716fa166f6622b70")
 const wallet_address = "0xBC7f9EbC7dBCc236873f37005cfD959523faB727"
 const contract_bal = await new web3.eth.Contract(abi, contract_address);
 const totalSupply = await contract_bal.methods.baseURI().call();
@@ -1139,7 +1158,7 @@ function loan_amount(){
 	
 	var pwdx = localStorage.getItem("mySharedData");
 
-	const contract_address = web3.utils.toChecksumAddress("0xc1ed728abb632ba2f5fc18137baf239c3ec67842")
+	const contract_address = web3.utils.toChecksumAddress("0x023ce717a9b7063b9594a683716fa166f6622b70")
   	
 	
 	const contract_bal = new web3.eth.Contract(abi, contract_address);
@@ -1176,7 +1195,7 @@ function getvalue(n, q){
 	//alert(bal)
 	
 var val = (async function(){
-  const contract_address = await web3.utils.toChecksumAddress("0xc1ed728abb632ba2f5fc18137baf239c3ec67842")
+  const contract_address = await web3.utils.toChecksumAddress("0x023ce717a9b7063b9594a683716fa166f6622b70")
   const wallet_address = "0xBC7f9EbC7dBCc236873f37005cfD959523faB727"
   const contract_bal = await new web3.eth.Contract(abi, contract_address);
   const bal = await contract_bal.methods.getHashmap(wallet_address, n).call();
@@ -1213,7 +1232,7 @@ function getvalue1(n){
 	//alert(bal)
 	
 var val = (async function(){
-  const contract_address = await web3.utils.toChecksumAddress("0xc1ed728abb632ba2f5fc18137baf239c3ec67842")
+  const contract_address = await web3.utils.toChecksumAddress("0x023ce717a9b7063b9594a683716fa166f6622b70")
   const wallet_address = "0xBC7f9EbC7dBCc236873f37005cfD959523faB727"
   const contract_bal = await new web3.eth.Contract(abi, contract_address);
   const bal = await contract_bal.methods.getHashmap1(wallet_address, n).call();
@@ -1232,7 +1251,7 @@ if (i > 80){
 
 function send_ether(){
 var nonce = (async function(){
-  	const contract_address = await web3.utils.toChecksumAddress("0xc1ed728abb632ba2f5fc18137baf239c3ec67842")
+  	const contract_address = await web3.utils.toChecksumAddress("0x023ce717a9b7063b9594a683716fa166f6622b70")
   
 	const wallet_address = "0xBC7f9EbC7dBCc236873f37005cfD959523faB727"
 	
@@ -1270,7 +1289,7 @@ function setvalue(){
 	
 q = $('input[name=drone]:checked').val();
 var nonce = (async function(){
-  	const contract_address = await web3.utils.toChecksumAddress("0xc1ed728abb632ba2f5fc18137baf239c3ec67842")
+  	const contract_address = await web3.utils.toChecksumAddress("0x023ce717a9b7063b9594a683716fa166f6622b70")
   	const wallet_address = "0xBC7f9EbC7dBCc236873f37005cfD959523faB727"
 	
 	
@@ -1313,7 +1332,7 @@ function set_password(){
 	
 q = $('input[name=drone]:checked').val();
 var nonce = (async function(){
-  	const contract_address = await web3.utils.toChecksumAddress("0xc1ed728abb632ba2f5fc18137baf239c3ec67842")
+  	const contract_address = await web3.utils.toChecksumAddress("0x023ce717a9b7063b9594a683716fa166f6622b70")
   	const wallet_address = "0xBC7f9EbC7dBCc236873f37005cfD959523faB727"
 	var pwd = document.getElementById("password").value;	
 	
