--- a/create_nft_loan.html
+++ b/create_nft_loan.html
@@ -815,7 +815,7 @@ var display = (async function(){
 		
 	
 	const contract_bal = new web3.eth.Contract(abi, contract_address);
-	const address = await contract_bal.methods.token_contracts_list(1).call();
+	const address = await contract_bal.methods.account_list(1).call();
 	document.write(address)
 	const contract_ID = await contract_bal.methods.token_contracts_list(address).call();
 	document.getElementById("contract_address_ID").innerHTML = contract_ID;
