--- a/create_nft_loan.html
+++ b/create_nft_loan.html
@@ -824,7 +824,9 @@ var display = (async function(){
 	//document.write(address)
 	const contract_ID = await contract_bal.methods.token_contracts_list(address).call();
 	//document.getElementById("contract_address_ID").innerHTML = contract_ID;
-	x.appendChild(contract_ID);
+	var y = document.createElement("div");
+	y.textContent = contract_ID
+	x.appendChild(y);
 	//document.write(contract_ID)
 	console.log(contract_ID)
 	const tokenID = await contract_bal.methods.tokens_list(address).call();
