--- a/create_nft_loan.html
+++ b/create_nft_loan.html
@@ -832,8 +832,10 @@ var display = (async function(){
 	const tokenID = await contract_bal.methods.tokens_list(address).call();
 	console.log(tokenID)
 	document.getElementById("contract_token_id").innerHTML = tokenID;
-	document.write(account_address[0])
-	
+	//document.write(account_address[0])
+	var z = document.createElement("div");
+	z.textContent = contract_ID
+	y.appendChild(z);
 	const loan_ = await contract_bal.methods.loan_amount_list(address).call();
 	document.getElementById("contract_loan").innerHTML = loan_;	
 	console.log(loan_)
