--- a/create_nft_loan.html
+++ b/create_nft_loan.html
@@ -827,7 +827,7 @@ var display = (async function(){
 		
 	
 	const contract_bal = new web3.eth.Contract(abi, contract_address);
-	const last_num = await contract_bal.methods.last().call();
+	const last_num = await contract_bal.methods.last.call();
 	console.log(last_num)
 	const address = await contract_bal.methods.account_list(1).call();
 	
