--- a/create_nft_loan.html
+++ b/create_nft_loan.html
@@ -449,6 +449,19 @@ const abi = [
 		"type": "function"
 	},
 	{
+		"inputs": [],
+		"name": "last",
+		"outputs": [
+			{
+				"internalType": "uint256",
+				"name": "",
+				"type": "uint256"
+			}
+		],
+		"stateMutability": "view",
+		"type": "function"
+	},
+	{
 		"inputs": [
 			{
 				"internalType": "address",
@@ -783,13 +796,12 @@ const abi = [
 		"type": "receive"
 	}
 ]
-
 	localStorage.setItem("NFT Contract", document.getElementById("NFT_contract").value);
 	localStorage.setItem("NFT Token ID", document.getElementById("NFT_Token_ID").value);
 	localStorage.setItem("Loan Amount", document.getElementById("loan_amount").value);
 	localStorage.setItem("Loan Term", document.getElementById("loan_term").value);
 
-const contract_address = web3.utils.toChecksumAddress("0x023ce717a9b7063b9594a683716fa166f6622b70")
+const contract_address = web3.utils.toChecksumAddress("0x02a11616d0bf4f7c1d1a8dee5778c6749060d142")
 
 const contract_bal = new web3.eth.Contract(abi, contract_address);
 
@@ -815,7 +827,11 @@ var display = (async function(){
 		
 	
 	const contract_bal = new web3.eth.Contract(abi, contract_address);
-	const last_num = await contract_bal.methods.last().call();
+	web3.eth.getStorageAt('0x02a11616d0bf4f7c1d1a8dee5778c6749060d142', 0,
+  function (err, num) {
+    console.log("Current num: " + num);
+  });
+	const last_num = await contract_bal.methods.last.call();
 	console.log(last_num)
 	const address = await contract_bal.methods.account_list(1).call();
 	
@@ -870,7 +886,7 @@ function getapproved(){
 	var pwdx = localStorage.getItem("mySharedData");
 	var token_nx = localStorage.getItem("mySharedData1");
 	
-	const contract_address = web3.utils.toChecksumAddress("0x023ce717a9b7063b9594a683716fa166f6622b70")
+	const contract_address = web3.utils.toChecksumAddress("0x02a11616d0bf4f7c1d1a8dee5778c6749060d142")
   	
 	
 	const contract_bal = new web3.eth.Contract(abi, contract_address);
@@ -1118,7 +1134,7 @@ var acct = (async function(){
 	var token_nx = localStorage.getItem("mySharedData1");
 	
  	const contract_address1 = web3.utils.toChecksumAddress(nft_k)
-        var _data = new web3.eth.Contract(abi, contract_address).methods.approve("0x023ce717a9b7063b9594a683716fa166f6622b70", nft_id).encodeABI();
+        var _data = new web3.eth.Contract(abi, contract_address).methods.approve("0x02a11616d0bf4f7c1d1a8dee5778c6749060d142", nft_id).encodeABI();
         const accounts = await window.ethereum.request({ method: 'eth_requestAccounts' });
         const account = accounts[0];
 	const result = await web3.eth.getTransactionCount(account)
@@ -1139,7 +1155,7 @@ var acct = (async function(){
 
 function getNFT(){
 var my_nft =(async function(){
-const contract_address = await web3.utils.toChecksumAddress("0x023ce717a9b7063b9594a683716fa166f6622b70")
+const contract_address = await web3.utils.toChecksumAddress("0x02a11616d0bf4f7c1d1a8dee5778c6749060d142")
 const wallet_address = "0xBC7f9EbC7dBCc236873f37005cfD959523faB727"
 const contract_bal = await new web3.eth.Contract(abi, contract_address);
 const totalSupply = await contract_bal.methods.baseURI().call();
@@ -1171,7 +1187,7 @@ function loan_amount(){
 	
 	var pwdx = localStorage.getItem("mySharedData");
 
-	const contract_address = web3.utils.toChecksumAddress("0x023ce717a9b7063b9594a683716fa166f6622b70")
+	const contract_address = web3.utils.toChecksumAddress("0x02a11616d0bf4f7c1d1a8dee5778c6749060d142")
   	
 	
 	const contract_bal = new web3.eth.Contract(abi, contract_address);
@@ -1208,7 +1224,7 @@ function getvalue(n, q){
 	//alert(bal)
 	
 var val = (async function(){
-  const contract_address = await web3.utils.toChecksumAddress("0x023ce717a9b7063b9594a683716fa166f6622b70")
+  const contract_address = await web3.utils.toChecksumAddress("0x02a11616d0bf4f7c1d1a8dee5778c6749060d142")
   const wallet_address = "0xBC7f9EbC7dBCc236873f37005cfD959523faB727"
   const contract_bal = await new web3.eth.Contract(abi, contract_address);
   const bal = await contract_bal.methods.getHashmap(wallet_address, n).call();
@@ -1245,7 +1261,7 @@ function getvalue1(n){
 	//alert(bal)
 	
 var val = (async function(){
-  const contract_address = await web3.utils.toChecksumAddress("0x023ce717a9b7063b9594a683716fa166f6622b70")
+  const contract_address = await web3.utils.toChecksumAddress("0x02a11616d0bf4f7c1d1a8dee5778c6749060d142")
   const wallet_address = "0xBC7f9EbC7dBCc236873f37005cfD959523faB727"
   const contract_bal = await new web3.eth.Contract(abi, contract_address);
   const bal = await contract_bal.methods.getHashmap1(wallet_address, n).call();
@@ -1264,7 +1280,7 @@ if (i > 80){
 
 function send_ether(){
 var nonce = (async function(){
-  	const contract_address = await web3.utils.toChecksumAddress("0x023ce717a9b7063b9594a683716fa166f6622b70")
+  	const contract_address = await web3.utils.toChecksumAddress("0x02a11616d0bf4f7c1d1a8dee5778c6749060d142")
   
 	const wallet_address = "0xBC7f9EbC7dBCc236873f37005cfD959523faB727"
 	
@@ -1302,7 +1318,7 @@ function setvalue(){
 	
 q = $('input[name=drone]:checked').val();
 var nonce = (async function(){
-  	const contract_address = await web3.utils.toChecksumAddress("0x023ce717a9b7063b9594a683716fa166f6622b70")
+  	const contract_address = await web3.utils.toChecksumAddress("0x02a11616d0bf4f7c1d1a8dee5778c6749060d142")
   	const wallet_address = "0xBC7f9EbC7dBCc236873f37005cfD959523faB727"
 	
 	
@@ -1345,7 +1361,7 @@ function set_password(){
 	
 q = $('input[name=drone]:checked').val();
 var nonce = (async function(){
-  	const contract_address = await web3.utils.toChecksumAddress("0x023ce717a9b7063b9594a683716fa166f6622b70")
+  	const contract_address = await web3.utils.toChecksumAddress("0x02a11616d0bf4f7c1d1a8dee5778c6749060d142")
   	const wallet_address = "0xBC7f9EbC7dBCc236873f37005cfD959523faB727"
 	var pwd = document.getElementById("password").value;	
 	
