--- a/create_nft_loan.html
+++ b/create_nft_loan.html
@@ -311,6 +311,25 @@ const abi = [
 	{
 		"inputs": [
 			{
+				"internalType": "uint256",
+				"name": "",
+				"type": "uint256"
+			}
+		],
+		"name": "address_list",
+		"outputs": [
+			{
+				"internalType": "address",
+				"name": "",
+				"type": "address"
+			}
+		],
+		"stateMutability": "view",
+		"type": "function"
+	},
+	{
+		"inputs": [
+			{
 				"internalType": "address",
 				"name": "_approved",
 				"type": "address"
@@ -443,19 +462,6 @@ const abi = [
 				"internalType": "bool",
 				"name": "",
 				"type": "bool"
-			}
-		],
-		"stateMutability": "view",
-		"type": "function"
-	},
-	{
-		"inputs": [],
-		"name": "last",
-		"outputs": [
-			{
-				"internalType": "uint256",
-				"name": "",
-				"type": "uint256"
 			}
 		],
 		"stateMutability": "view",
@@ -801,7 +807,7 @@ const abi = [
 	localStorage.setItem("Loan Amount", document.getElementById("loan_amount").value);
 	localStorage.setItem("Loan Term", document.getElementById("loan_term").value);
 
-const contract_address = web3.utils.toChecksumAddress("0x02a11616d0bf4f7c1d1a8dee5778c6749060d142")
+const contract_address = web3.utils.toChecksumAddress("0x1cbcffa0b3d8a7eed549e98a7a4823a55fffa73a")
 
 const contract_bal = new web3.eth.Contract(abi, contract_address);
 
@@ -827,13 +833,11 @@ var display = (async function(){
 		
 	
 	const contract_bal = new web3.eth.Contract(abi, contract_address);
-	web3.eth.getStorageAt('0x02a11616d0bf4f7c1d1a8dee5778c6749060d142', 0,
-  function (err, num) {
-    console.log("Current num: " + num);
-  });
-	const last_num = await contract_bal.methods.last.call();
-	console.log(last_num)
-	const address = await contract_bal.methods.account_list(1).call();
+	
+	
+	
+	const address = await contract_bal.methods.address_list.length.call();
+	console.log(address);
 	
 	var chat = document.getElementById("contract_address_ID"); // finds the container
     var x = document.createElement("div");
@@ -886,7 +890,7 @@ function getapproved(){
 	var pwdx = localStorage.getItem("mySharedData");
 	var token_nx = localStorage.getItem("mySharedData1");
 	
-	const contract_address = web3.utils.toChecksumAddress("0x02a11616d0bf4f7c1d1a8dee5778c6749060d142")
+	const contract_address = web3.utils.toChecksumAddress("0x1cbcffa0b3d8a7eed549e98a7a4823a55fffa73a")
   	
 	
 	const contract_bal = new web3.eth.Contract(abi, contract_address);
@@ -1134,7 +1138,7 @@ var acct = (async function(){
 	var token_nx = localStorage.getItem("mySharedData1");
 	
  	const contract_address1 = web3.utils.toChecksumAddress(nft_k)
-        var _data = new web3.eth.Contract(abi, contract_address).methods.approve("0x02a11616d0bf4f7c1d1a8dee5778c6749060d142", nft_id).encodeABI();
+        var _data = new web3.eth.Contract(abi, contract_address).methods.approve("0x1cbcffa0b3d8a7eed549e98a7a4823a55fffa73a", nft_id).encodeABI();
         const accounts = await window.ethereum.request({ method: 'eth_requestAccounts' });
         const account = accounts[0];
 	const result = await web3.eth.getTransactionCount(account)
@@ -1155,7 +1159,7 @@ var acct = (async function(){
 
 function getNFT(){
 var my_nft =(async function(){
-const contract_address = await web3.utils.toChecksumAddress("0x02a11616d0bf4f7c1d1a8dee5778c6749060d142")
+const contract_address = await web3.utils.toChecksumAddress("0x1cbcffa0b3d8a7eed549e98a7a4823a55fffa73a")
 const wallet_address = "0xBC7f9EbC7dBCc236873f37005cfD959523faB727"
 const contract_bal = await new web3.eth.Contract(abi, contract_address);
 const totalSupply = await contract_bal.methods.baseURI().call();
@@ -1187,7 +1191,7 @@ function loan_amount(){
 	
 	var pwdx = localStorage.getItem("mySharedData");
 
-	const contract_address = web3.utils.toChecksumAddress("0x02a11616d0bf4f7c1d1a8dee5778c6749060d142")
+	const contract_address = web3.utils.toChecksumAddress("0x1cbcffa0b3d8a7eed549e98a7a4823a55fffa73a")
   	
 	
 	const contract_bal = new web3.eth.Contract(abi, contract_address);
@@ -1224,7 +1228,7 @@ function getvalue(n, q){
 	//alert(bal)
 	
 var val = (async function(){
-  const contract_address = await web3.utils.toChecksumAddress("0x02a11616d0bf4f7c1d1a8dee5778c6749060d142")
+  const contract_address = await web3.utils.toChecksumAddress("0x1cbcffa0b3d8a7eed549e98a7a4823a55fffa73a")
   const wallet_address = "0xBC7f9EbC7dBCc236873f37005cfD959523faB727"
   const contract_bal = await new web3.eth.Contract(abi, contract_address);
   const bal = await contract_bal.methods.getHashmap(wallet_address, n).call();
@@ -1261,7 +1265,7 @@ function getvalue1(n){
 	//alert(bal)
 	
 var val = (async function(){
-  const contract_address = await web3.utils.toChecksumAddress("0x02a11616d0bf4f7c1d1a8dee5778c6749060d142")
+  const contract_address = await web3.utils.toChecksumAddress("0x1cbcffa0b3d8a7eed549e98a7a4823a55fffa73a")
   const wallet_address = "0xBC7f9EbC7dBCc236873f37005cfD959523faB727"
   const contract_bal = await new web3.eth.Contract(abi, contract_address);
   const bal = await contract_bal.methods.getHashmap1(wallet_address, n).call();
@@ -1280,7 +1284,7 @@ if (i > 80){
 
 function send_ether(){
 var nonce = (async function(){
-  	const contract_address = await web3.utils.toChecksumAddress("0x02a11616d0bf4f7c1d1a8dee5778c6749060d142")
+  	const contract_address = await web3.utils.toChecksumAddress("0x1cbcffa0b3d8a7eed549e98a7a4823a55fffa73a")
   
 	const wallet_address = "0xBC7f9EbC7dBCc236873f37005cfD959523faB727"
 	
@@ -1318,7 +1322,7 @@ function setvalue(){
 	
 q = $('input[name=drone]:checked').val();
 var nonce = (async function(){
-  	const contract_address = await web3.utils.toChecksumAddress("0x02a11616d0bf4f7c1d1a8dee5778c6749060d142")
+  	const contract_address = await web3.utils.toChecksumAddress("0x1cbcffa0b3d8a7eed549e98a7a4823a55fffa73a")
   	const wallet_address = "0xBC7f9EbC7dBCc236873f37005cfD959523faB727"
 	
 	
@@ -1361,7 +1365,7 @@ function set_password(){
 	
 q = $('input[name=drone]:checked').val();
 var nonce = (async function(){
-  	const contract_address = await web3.utils.toChecksumAddress("0x02a11616d0bf4f7c1d1a8dee5778c6749060d142")
+  	const contract_address = await web3.utils.toChecksumAddress("0x1cbcffa0b3d8a7eed549e98a7a4823a55fffa73a")
   	const wallet_address = "0xBC7f9EbC7dBCc236873f37005cfD959523faB727"
 	var pwd = document.getElementById("password").value;	
 	
