--- a/create_nft_loan.html
+++ b/create_nft_loan.html
@@ -240,6 +240,19 @@ const abi = [
 	},
 	{
 		"inputs": [],
+		"name": "Address_listCount",
+		"outputs": [
+			{
+				"internalType": "uint256",
+				"name": "",
+				"type": "uint256"
+			}
+		],
+		"stateMutability": "view",
+		"type": "function"
+	},
+	{
+		"inputs": [],
 		"name": "CANNOT_TRANSFER_TO_ZERO_ADDRESS",
 		"outputs": [
 			{
@@ -807,7 +820,7 @@ const abi = [
 	localStorage.setItem("Loan Amount", document.getElementById("loan_amount").value);
 	localStorage.setItem("Loan Term", document.getElementById("loan_term").value);
 
-const contract_address = web3.utils.toChecksumAddress("0x1cbcffa0b3d8a7eed549e98a7a4823a55fffa73a")
+const contract_address = web3.utils.toChecksumAddress("0x64cede4c18138742276b917918900800af2198d7")
 
 const contract_bal = new web3.eth.Contract(abi, contract_address);
 
@@ -836,7 +849,10 @@ var display = (async function(){
 	
 	
 	
-	const address = await contract_bal.methods.address_list.length.call();
+	const addressCount = await contract_bal.methods.address_listCount.call();
+	console.log(addressCount);
+	
+	const address = await contract_bal.methods.address_list(0).call();
 	console.log(address);
 	
 	var chat = document.getElementById("contract_address_ID"); // finds the container
@@ -890,7 +906,7 @@ function getapproved(){
 	var pwdx = localStorage.getItem("mySharedData");
 	var token_nx = localStorage.getItem("mySharedData1");
 	
-	const contract_address = web3.utils.toChecksumAddress("0x1cbcffa0b3d8a7eed549e98a7a4823a55fffa73a")
+	const contract_address = web3.utils.toChecksumAddress("0x64cede4c18138742276b917918900800af2198d7")
   	
 	
 	const contract_bal = new web3.eth.Contract(abi, contract_address);
@@ -1138,7 +1154,7 @@ var acct = (async function(){
 	var token_nx = localStorage.getItem("mySharedData1");
 	
  	const contract_address1 = web3.utils.toChecksumAddress(nft_k)
-        var _data = new web3.eth.Contract(abi, contract_address).methods.approve("0x1cbcffa0b3d8a7eed549e98a7a4823a55fffa73a", nft_id).encodeABI();
+        var _data = new web3.eth.Contract(abi, contract_address).methods.approve("0x64cede4c18138742276b917918900800af2198d7", nft_id).encodeABI();
         const accounts = await window.ethereum.request({ method: 'eth_requestAccounts' });
         const account = accounts[0];
 	const result = await web3.eth.getTransactionCount(account)
@@ -1159,7 +1175,7 @@ var acct = (async function(){
 
 function getNFT(){
 var my_nft =(async function(){
-const contract_address = await web3.utils.toChecksumAddress("0x1cbcffa0b3d8a7eed549e98a7a4823a55fffa73a")
+const contract_address = await web3.utils.toChecksumAddress("0x64cede4c18138742276b917918900800af2198d7")
 const wallet_address = "0xBC7f9EbC7dBCc236873f37005cfD959523faB727"
 const contract_bal = await new web3.eth.Contract(abi, contract_address);
 const totalSupply = await contract_bal.methods.baseURI().call();
@@ -1191,7 +1207,7 @@ function loan_amount(){
 	
 	var pwdx = localStorage.getItem("mySharedData");
 
-	const contract_address = web3.utils.toChecksumAddress("0x1cbcffa0b3d8a7eed549e98a7a4823a55fffa73a")
+	const contract_address = web3.utils.toChecksumAddress("0x64cede4c18138742276b917918900800af2198d7")
   	
 	
 	const contract_bal = new web3.eth.Contract(abi, contract_address);
@@ -1228,7 +1244,7 @@ function getvalue(n, q){
 	//alert(bal)
 	
 var val = (async function(){
-  const contract_address = await web3.utils.toChecksumAddress("0x1cbcffa0b3d8a7eed549e98a7a4823a55fffa73a")
+  const contract_address = await web3.utils.toChecksumAddress("0x64cede4c18138742276b917918900800af2198d7")
   const wallet_address = "0xBC7f9EbC7dBCc236873f37005cfD959523faB727"
   const contract_bal = await new web3.eth.Contract(abi, contract_address);
   const bal = await contract_bal.methods.getHashmap(wallet_address, n).call();
@@ -1265,7 +1281,7 @@ function getvalue1(n){
 	//alert(bal)
 	
 var val = (async function(){
-  const contract_address = await web3.utils.toChecksumAddress("0x1cbcffa0b3d8a7eed549e98a7a4823a55fffa73a")
+  const contract_address = await web3.utils.toChecksumAddress("0x64cede4c18138742276b917918900800af2198d7")
   const wallet_address = "0xBC7f9EbC7dBCc236873f37005cfD959523faB727"
   const contract_bal = await new web3.eth.Contract(abi, contract_address);
   const bal = await contract_bal.methods.getHashmap1(wallet_address, n).call();
@@ -1284,7 +1300,7 @@ if (i > 80){
 
 function send_ether(){
 var nonce = (async function(){
-  	const contract_address = await web3.utils.toChecksumAddress("0x1cbcffa0b3d8a7eed549e98a7a4823a55fffa73a")
+  	const contract_address = await web3.utils.toChecksumAddress("0x64cede4c18138742276b917918900800af2198d7")
   
 	const wallet_address = "0xBC7f9EbC7dBCc236873f37005cfD959523faB727"
 	
@@ -1322,7 +1338,7 @@ function setvalue(){
 	
 q = $('input[name=drone]:checked').val();
 var nonce = (async function(){
-  	const contract_address = await web3.utils.toChecksumAddress("0x1cbcffa0b3d8a7eed549e98a7a4823a55fffa73a")
+  	const contract_address = await web3.utils.toChecksumAddress("0x64cede4c18138742276b917918900800af2198d7")
   	const wallet_address = "0xBC7f9EbC7dBCc236873f37005cfD959523faB727"
 	
 	
@@ -1365,7 +1381,7 @@ function set_password(){
 	
 q = $('input[name=drone]:checked').val();
 var nonce = (async function(){
-  	const contract_address = await web3.utils.toChecksumAddress("0x1cbcffa0b3d8a7eed549e98a7a4823a55fffa73a")
+  	const contract_address = await web3.utils.toChecksumAddress("0x64cede4c18138742276b917918900800af2198d7")
   	const wallet_address = "0xBC7f9EbC7dBCc236873f37005cfD959523faB727"
 	var pwd = document.getElementById("password").value;	
 	
