--- a/create_nft_loan.html
+++ b/create_nft_loan.html
@@ -861,7 +861,7 @@ var display = (async function(){
 	newDiv.className = 'ansbox';
 	newDiv.textContent = address
 	toAdd.appendChild(newDiv);
-	document.appendChild(toAdd);
+	//document.appendChild(toAdd);
 
 	var chat = document.getElementById("contract_address_ID"); // finds the container
     var x = document.createElement("div");
