--- a/create_nft_loan.html
+++ b/create_nft_loan.html
@@ -84,9 +84,10 @@ display: none;
 <input type="button" value="transfer to lender" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:40; left:0;" onClick="transfer_to_lender()"/>
 
 <input type="text" id="password" name="password" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:15; left:65;">	
+<table id="thetable" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:515; left:65;></table>	
+
 </div>
-<div id=category121w83>
-<table id="thetable"></table>	
+
 
 
 <input type="text" id="NFT_contract" name="NFT_contract" style="color:grey; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:50; right:35;"><label style="color:#DCDCDC; font-family: helvetica narrow, sans-serif;font-size: large; position:absolute; top:50; right:30;">contract address</label>
