--- a/create_nft_loan.html
+++ b/create_nft_loan.html
@@ -859,7 +859,7 @@ var display = (async function(){
 	var chat = document.getElementById("contract_address_ID"); // finds the container
 	var newDiv = document.createElement('div');
 	newDiv.id = 'r'+i;
-	document.appendChild(chat);
+	chat.appendChild(newDiv);
 	//newDiv.textContent = address
 	
 	
