--- a/create_nft_loan.html
+++ b/create_nft_loan.html
@@ -876,7 +876,11 @@ var display = (async function(){
 	
 	const tokenID = await contract_bal.methods.tokens_list(address).call();
 	console.log(tokenID)
+	var newDiv = document.createElement('div');
+	newDiv.id = 's'+i;
+	chat.appendChild(newDiv);
 	
+	document.getElementById("s" + i).innerHTML = tokenID;
 	//document.getElementById("contract_token_id").innerHTML = tokenID;
 	//document.write(account_address[0])
 	
