--- a/create_nft_loan.html
+++ b/create_nft_loan.html
@@ -860,7 +860,7 @@ var display = (async function(){
 	var newDiv = document.createElement('div');
 	newDiv.id = 'q'+i;
 	chat.appendChild(newDiv);
-	document.getElementById("q" + i).innerHTML = <hr>;
+	document.getElementById("q" + i).innerHTML = "-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------";
 	var newDiv = document.createElement('div');
 	newDiv.id = 'r'+i;
 	chat.appendChild(newDiv);
